[project]
name = "comfyui-nich-utils"
description = "Several utility nodes for use with ComfyUI."
version = "0.0.6"
license = "LICENSE"
dependencies = ["torchvision", "numpy", "torch", "PIL"]

[project.urls]
Repository = "https://github.com/nickve28/ComfyUI-Nich-Utils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nickve28"
DisplayName = "ComfyUI-Nich-Utils"
Icon = ""
